[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.100"                                   # error handling
bytes = "1.10.1"                                     # helps manage buffers
tokio = { version = "1.48.0", features = ["full"] } # async networking

[dev-dependencies]
rusty-hook = "^0.11.2"
