[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.100"                                   # error handling
bytes = "1.10.1"                                     # helps manage buffers
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] } # async networking
tokio-stream = "0.1.17"                             # async stream utilities
uuid = {version ="1.18.1", features = ["v4"]}                                      # unique identifiers

[dev-dependencies]
rusty-hook = "^0.11.2"
tempfile = "3.8"
